# wb_api_service

./: .env.example  .gitignore  DEPLOY.md  README.md  createtables.sql  main.py  proxies_list.json  pyproject.toml  start_monitoring.py  start_monitoring_async.py  start_monitoring_new.py
api/: bot_settings.py  data_for_monitoring.py  notifications.py  statistics.py  user.py  wb_keys.py  work_with_subscribe.py
app/: logger.py  send_requests_to_tg.py  settings.py
app/templates/: msg_with_orders_for_client.j2  msg_with_sales_and_refunds_for_client.j2  no_send_alert_of_new_operations.j2  templates.py
app/wb_monitoring/: get_data_from_wb.py  get_data_from_wb_async.py  get_data_from_wb_new.py
orm/: __init__.py  base_model.py  botsettings_model.py  check_subscribe_model.py  notification_model.py  session_manager.py  type_operation_model.py  user_model.py  wb_api_keys_model.py
