[tool.poetry]
name = "wb_api_service"
version = "0.1.0"
description = ""
authors = ["Maksim Tarasutin <maks@tarasutin.ru>"]
readme = "README.md"
packages = [{include = "wb_api_service"}]

[tool.poetry.dependencies]
python = "^3.11"

alembic = ">=1.13.0"
asyncpg = "^0.29.0"
fastapi = ">=0.104.1"
gspread = "^5.11.0"
httpx = "^0.25"
aiohttp = ">=3.9.1"
jinja2 = ">=3.1.3"
loguru = ">=0.7.2"
openpyxl = "^3.1"
pandas = ">=2.1"
pydantic=">=2.5.2"
pydantic-settings = ">=0.2.0"
python-dotenv = "==0.21.1"
APScheduler = ">=3.10.4"
schulze = "==0.1"
starlette = ">=0.27.0,<0.28.0"
sqlalchemy = { version = "^2.0.23", extras = ["asyncio"] }
uvicorn = ">=0.24"
uvloop = ">=0.19.0"

[tool.poetry.group.dev.dependencies]
black = "==23.1.0"
httpx = "^0.25"
sqlalchemy-utils = ">=0.41.1"
pytest =">=7.4.3"
yarl = ">=1.9.4"
mypy = ">=1.7.1"
isort = ">=5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["F", "E", "W", "C90",
          "I", "N", "S", "B", "A",
          "ISC", "T20", "Q", "PTH"]

ignore = ["A003"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"
